// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlankPluginCard should render 1`] = `
<DocumentFragment>
  <div>
    <button
      class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800 flex-shrink-0"
        />
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Author
          </span>
          <div
            class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Name
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BlankPluginCard should render with category 1`] = `
<DocumentFragment>
  <div>
    <button
      class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800 flex-shrink-0"
        />
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Author
          </span>
          <div
            class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Name
          </div>
          <div
            class="flex items-center mt-4 space-x-2 text-theme-primary-100 dark:text-theme-secondary-800"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                categories.svg
              </svg>
            </div>
            <span
              class="text-sm font-semibold"
            >
              Other
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BlankPluginCard should render with name 1`] = `
<DocumentFragment>
  <div>
    <button
      class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800 flex-shrink-0"
        />
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Author
          </span>
          <div
            class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            test-name
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdnxRM NjstW"
                height="20"
                width="20"
              >
                <svg>
                  categories.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render alert icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdnxRM NjstW"
                height="20"
                width="20"
              >
                <svg>
                  categories.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          >
            <span
              class="ml-3 text-xl"
              data-testid="PluginCard__minimum-version-warning"
            >
              <div
                class="sc-bdnxRM NjstW text-theme-warning-500"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render official icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
              <div
                class="sc-bdnxRM AFVmm text-theme-warning-600"
                height="16"
                width="16"
              >
                <svg>
                  shield-check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdnxRM NjstW"
                height="20"
                width="20"
              >
                <svg>
                  categories.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render update icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdnxRM NjstW"
                height="20"
                width="20"
              >
                <svg>
                  categories.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          >
            <span
              class="text-theme-secondary-700"
              data-testid="PluginCard__update-available"
              role="button"
              tabindex="0"
            >
              <div
                class="sc-bdnxRM NjstW"
                height="20"
                width="20"
              >
                <svg>
                  arrows-rotate.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render without category 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should trigger view 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
        data-testid="Card"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdnxRM NjstW"
                height="20"
                width="20"
              >
                <svg>
                  categories.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
